# Pirate-Radio

./: .env.example  .gitignore  PiRate_Radio_Design_Doc.md  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: BUILD-LOG.md  CODEMAP.md
docs/agents/: README.md  devils-advocate.md  fact-checker.md  field-operator.md  old-man.md  qa-engineer.md  rpi-expert.md  senior-dev.md
docs/decisions/: 0001-design-review-rev1.md  0002-design-review-rev2.md  0003-phase0-plan-review-rev1.md  0004-phase0-tests-errors-clock.md  0005-phase0-tests-persistence.md  0006-phase0-tests-catalog.md  0007-phase0-tests-grid.md  0008-phase0-tests-config.md  0009-phase1-plan-review-rev1.md  0010-deepdive-review-rev1.md  0011-p1-4-generator-tests.md  0012-p1-5-resume-tests.md  0013-p1-6-pipeline-tests.md  0014-p1-7-state-dir-tests.md  0015-p1-8-catalog-cache-and-golden.md  0016-phase2-plan-review.md  0017-p2-1-loudness-tests.md  0018-p2-2-resample-tests.md  0019-p2-3-ffmpeg-decode-tests.md  0020-p2-4-config-providers-binaries.md  0021-p2-5-tts-tests.md  0022-p2-6-loudness-wiring.md  0023-phase3-plan-adopted.md  0024-p3-1-context-tests.md  0025-p3-2-prompts-tests.md  0026-p3-3-protocol-narrow-scripteddj.md  0027-p3-4-failover-tests.md  0028-p3-5-http-text-tests.md  0029-p3-6-elevenlabs-cloud-preflight.md  0030-p3-7-build-seam.md  0031-p3-8-producer-wiring.md  0032-phase3-deep-dive.md  0033-phase4-plan-rev1-vote.md  0034-phase4-plan-adopted.md  0035-p4-1-sounddevicesink.md  0036-p4-2-udev-resolver.md  0037-p4-3-supervisor-status.md  0038-p4-4-daily-slice.md  0039-p4-5-station-loop.md  0040-p4-5b-itemkind-removal.md  (+29 more)
docs/ops/: config-reference.md  control-api.md  first-boot.md  grids.md  tagging.md  udev-audio.md
docs/plans/: phase-0-implementation-plan.md  phase-1-implementation-plan.md  phase-2-implementation-plan.md  phase-3-implementation-plan.md  phase-4-implementation-plan.md  phase-5-implementation-plan.md  phase-6-implementation-plan.md
docs/process/: strict-tdd.md
src/pirate_radio/: __init__.py  __main__.py  audio_devices.py  clock.py  config.py  coordinator.py  durability.py  errors.py  logging_setup.py  lookahead.py  midnight.py  persistence.py  scrub.py  station.py  status.py  supervisor.py  yeartag.py
src/pirate_radio/audio/: __init__.py  binaries.py  buffer.py  decode.py  loudness.py  resample.py  sink.py
src/pirate_radio/catalog/: __init__.py  cache.py  metadata.py  models.py  scanner.py
src/pirate_radio/control/: api.py  logs.py  models.py  server.py  service.py
src/pirate_radio/dj/: __init__.py  _http.py  build.py  context.py  failover.py  fakes.py  prompts.py  protocols.py  text.py  tts.py
src/pirate_radio/pipeline/: __init__.py  buffer.py  daily.py  player.py  producer.py  segment.py  timing.py
src/pirate_radio/schedule/: __init__.py  generator.py  grid.py  models.py  resume.py
src/pirate_radio/tagging/: __main__.py  clients.py  models.py  selection.py  tag_writer.py  tagger.py
systemd/: pirate-radio.service
tests/: conftest.py  test_coordinator.py  test_durability.py  test_logging_setup.py  test_lookahead.py  test_main.py  test_midnight.py  test_model_immutability.py  test_smoke.py  test_station.py  test_status.py  test_supervisor.py  test_systemd_unit.py
tests/audio/: test_binaries.py  test_buffer.py  test_decode.py  test_ffmpeg_decode.py  test_loudness.py  test_resample.py  test_sink.py
tests/audio_devices/: test_audio_devices.py
tests/catalog/: test_cache.py  test_metadata.py  test_models.py  test_scanner.py
tests/clock/: test_clock.py
tests/config/: test_config.py  test_phase3_config.py
tests/control/: test_api.py  test_control_config.py  test_logs.py  test_models.py  test_server.py  test_service.py
tests/dj/: test_build.py  test_context.py  test_elevenlabs_tts.py  test_failover.py  test_http.py  test_network_smokes.py  test_prompts.py  test_protocols_and_fakes.py  test_scripted_dj.py  test_text.py  test_tts.py
tests/errors/: test_errors.py  test_provider_errors.py
tests/persistence/: test_persistence.py
tests/pipeline/: test_buffer.py  test_daily.py  test_pipeline.py  test_player.py  test_producer.py  test_producer_dj.py  test_timing.py
tests/schedule/: test_generator.py  test_grid.py  test_models.py  test_resume.py
tests/schedule/fixtures/: golden_allday_seed7.json
tests/tagging/: test_clients.py  test_models.py  test_selection.py  test_tag_main.py  test_tag_writer.py  test_tagger.py
