[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pirate-radio"
version = "0.0.1"
description = "Automated multi-station FM radio broadcaster with an optional AI DJ, for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Steven Gann" }]
dependencies = [
    "pydantic>=2.7,<3",
    "mutagen>=1.47",
    "PyYAML>=6.0",
    "numpy>=1.26,<3",  # AudioBuffer (R14); 64-bit Raspberry Pi OS / arm64 only (H8)
    "pyloudnorm>=0.2.0,<0.3",  # EBU R128 loudness (R22); pure-Python, unit-testable (Phase 2)
    "scipy>=1.15,<2",  # resample_poly for TTS rate matching (Q2); aarch64 cp311/cp312 wheels (H8)
    "anthropic>=0.107,<1",  # Claude Messages API (D2); sync client hopped via to_thread (R23).
    # Pin verified against PyPI 2026-06-08 (current 0.107.1, still 0.x). Pure-Python + native
    # jiter/pydantic-core that ship prebuilt aarch64 cp311/cp312 wheels (clean on 64-bit Pi OS).
    "httpx>=0.27,<1",  # DeepSeek + Ollama + ElevenLabs (Phase 3); native-async, pure-Python wheel.
    "sounddevice>=0.4,<1",  # real audio output (Phase 4, R20). NB: the Linux wheel does NOT bundle
    # PortAudio — the Pi needs the system lib: `sudo apt install libportaudio2` (see docs/ops).
    "fastapi>=0.115,<1",  # control API (Phase 6, D4). Plain uvicorn (no [standard]: watchfiles/
    "uvicorn>=0.30,<1",  # websockets are dead weight on a daemon). httpx (above) backs TestClient.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
    "pytest-asyncio>=0.23",
    "pytest-socket>=0.7",  # Phase 6: enforce "no socket bind on CI" for the control-API tests (R21)
    "pytest-timeout>=2.3",  # a run-loop regression must FAIL loudly, never hang CI (code-cycle QA)
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pirate_radio = ["py.typed"]

# ---------------------------------------------------------------------------
# Testing
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"  # bare `async def test_*` (no per-test decorator)
addopts = [
    "-ra",
    "--import-mode=importlib",  # allow same-basename test files across dirs (no __init__)
    "--strict-markers",
    "--strict-config",
    "--cov=pirate_radio",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
    # R21 as a SUITE-WIDE invariant (arch-cycle QA): block every real socket on the CI path, not
    # just in one file. --allow-unix-socket keeps asyncio's AF_UNIX self-pipe + the in-process
    # ASGI TestClient working; the @pytest.mark.network smokes re-enable real sockets explicitly.
    "--disable-socket",
    "--allow-unix-socket",
    # a deadlock/infinite-loop regression (e.g. a stale day-roll re-slice spin) must FAIL with a
    # traceback, not hang the whole job — per-test wall-clock ceiling (code-cycle QA HIGH).
    "--timeout=60",
]
markers = [
    "hardware: tests that require real Raspberry Pi hardware (skipped in CI)",
    "network: tests that make real network calls to LLM/TTS providers (skipped in CI; R21)",
    "slow: long-running tests",
]

[tool.coverage.run]
branch = true
source = ["pirate_radio"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# ---------------------------------------------------------------------------
# Linting / formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.ruff.lint.isort]
known-first-party = ["pirate_radio"]

# ---------------------------------------------------------------------------
# Type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
packages = ["pirate_radio"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["pyloudnorm.*", "scipy.*", "sounddevice.*"]
ignore_missing_imports = true

# mutagen ships py.typed in some releases, but its top-level `File` is re-exported lazily in a way
# mypy resolves INCONSISTENTLY across environments — flip-flopping between `attr-defined` (ignore
# needed) and `unused-ignore` (ignore not), which broke CI. Skip-following it so it is uniformly
# untyped (Any) everywhere; the only boundary is `_open_mutagen -> Any`, so nothing is lost.
[[tool.mypy.overrides]]
module = ["mutagen"]
ignore_missing_imports = true
follow_imports = "skip"
